--- a/pages/default.html
+++ b/pages/default.html
@@ -4,13 +4,28 @@
     <title>
         <h3>Covid-Ex-Tension</h3>
     </title>
-    <script src="../scripts/pageScript.js" type="text/javascript"></script>
+    <!-- Leaflet scripts -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+        integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+        crossorigin="" />
+    <script src="../libScripts/leaflet/leaflet.js"></script>
+    <!-- P5 JS -->
+    <script src="../libScripts/p5/p5.js" type="text/javascript"></script>
+
+    <!-- My Styles -->
+    <link rel="stylesheet" href="../customStyles/myStyles.css">
 </head>
 
 <body>
     <h4>Sridhar Type Here</h4>
     <input id="myInput" />
     <button id="submit" type="button">OK</button>
+
+    <div id="mapid"></div>
+    <!-- My handler script -->
+    <!-- <script src="../scripts/pageScript.js" type="text/javascript"></script> -->
+    <script src="../scripts/pageScript.js" type="module"></script>
+
 </body>
 
 </html>
