--- a/pages/default.html
+++ b/pages/default.html
@@ -17,11 +17,18 @@
 </head>
 
 <body>
-    <h4>Sridhar Type Here</h4>
-    <input id="myInput" />
-    <button id="submit" type="button">OK</button>
+    <div id='loader'>
+        <h2>Loading Data. Please be patient!</h2>
+        <img src="../assets/loading.gif" alt="loading" />
+    </div>
+    <div id='content'>
+        <h4>Choose your Country: </h4>
+        <select id="countriesList"></select>
+        <button id="submit" type="button">OK</button>
 
-    <div id="mapid"></div>
+
+        <div id="mapid"></div>
+    </div>
     <!-- My handler script -->
     <!-- <script src="../scripts/pageScript.js" type="text/javascript"></script> -->
     <script src="../scripts/pageScript.js" type="module"></script>
