Has all the code functioning as needed

--- a/pages/default.html
+++ b/pages/default.html
@@ -33,10 +33,13 @@
             <button id="submitButton" type="button">Submit!</button>
             <button id="updateButton" type="button">Update!</button>
         </div>
+        <div id="InfoDiv">
+            <h4 id="infoText"></h4>
+        </div>
 
-        <div id="myMap">
+        <div id="covidMapDiv">
             <img src="../assets/mapLoader.gif" alt="mapLoading" id="mapLoader" />
-            <div id="mapid"></div>
+            <!-- <div id="covidMap"></div> -->
         </div>
     </div>
     <!-- My handler script -->
