--- a/pages/default.html
+++ b/pages/default.html
@@ -32,6 +32,8 @@
         <div id="buttonsDiv">
             <button id="submitButton" type="button">Submit!</button>
             <button id="updateButton" type="button">Update!</button>
+            <a href="https://github.com/mattasridhar/covidvizualizer" style='align-items: flex-end;'><i>@Sridhar's
+                    Stuff</i></a>
         </div>
         <div id="InfoDiv">
             <h4 id="infoText"></h4>
